@@ -52,6 +52,7 @@ PWBOBJ wbCreateToolbar(PWBOBJ pwboParent, PWBITEM pitem[], int nItems, int nBtnW
 	pwbo->subitem = -1;
 	pwbo->style = 0;
 	pwbo->pszCallBackFn = NULL;
+	pwbo->pszCallBackObj = NULL;
 	pwbo->lparam = 0;
 	pwbo->parent = pwboParent;
 
